[gd_scene load_steps=3 format=3 uid="uid://c80v73kocsixr"]

[ext_resource type="Script" uid="uid://dp6jdtm3lyjm0" path="res://end_screen.gd" id="1_my301"]
[ext_resource type="Texture2D" uid="uid://bgiu4akri3ncm" path="res://endcreenbg.png" id="2_abjgy"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_my301")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_abjgy")

[node name="Again" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 509.40564
offset_top = 144.43597
offset_right = 1406.2566
offset_bottom = 411.577
rotation = -0.053352397

[node name="Menu" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 668.2347
offset_top = 376.62418
offset_right = 1274.7478
offset_bottom = 670.21185
rotation = 0.04884791

[node name="Exit" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 634.78217
offset_top = 606.0884
offset_right = 1374.9128
offset_bottom = 872.22
rotation = 0.2732712

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="button_down" from="Again" to="." method="_on_again_button_down"]
[connection signal="button_down" from="Menu" to="." method="_on_menu_button_down"]
[connection signal="button_down" from="Exit" to="." method="_on_exit_button_down"]
